tests/miniJava/neg/006750_mutation.MiniJava
class java { String static void Main ( String [ ] java ) { { } } }
